SF Primes/src/objects/LMA_Pipeline__c.object
<CustomObject>
    <description>This objects supports the LMA pipeline weekly reporting process. This object will allow input of new market advertising spend projection details by the Regional Director on a weekly basis and allow edits to existing details.</description>
    <fields>
        <fullName>Annual_Total__c</fullName>
        <formula>BLANKVALUE(Jan__c, 0) +
BLANKVALUE(Feb__c, 0) +
BLANKVALUE(Mar__c, 0) +  
BLANKVALUE(Apr__c, 0) +
BLANKVALUE(May__c, 0) +
BLANKVALUE(Jun__c, 0) +
BLANKVALUE(Jul__c, 0) +
BLANKVALUE(Aug__c, 0) +
BLANKVALUE(Sep__c, 0) +
BLANKVALUE(Oct__c, 0) +
BLANKVALUE(Nov__c, 0) +
BLANKVALUE(Dec__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apr_Last_Update__c</fullName>
        <inlineHelpText>Last date April value was updated</inlineHelpText>
        <label>Apr Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apr_Upd__c</fullName>
        <formula>NOT(ISBLANK(Apr_Last_Update__c)) &amp;&amp; 
Apr_Last_Update__c &gt; TODAY() - 7 &amp;&amp; 
Apr_Last_Update__c &lt; TODAY() + 1</formula>
        <inlineHelpText>April Value Updated This week?</inlineHelpText>
        <label>Apr Upd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apr__c</fullName>
        <inlineHelpText>At least one monthly bucket should have a value greater than $0.</inlineHelpText>
        <label>Apr</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aug_Last_Update__c</fullName>
        <inlineHelpText>Last date August value was updated</inlineHelpText>
        <label>Aug Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Aug_Upd__c</fullName>
        <formula>NOT(ISBLANK(Aug_Last_Update__c)) &amp;&amp; 
Aug_Last_Update__c &gt; TODAY() - 7 &amp;&amp; 
Aug_Last_Update__c &lt; TODAY() + 1</formula>
        <inlineHelpText>August Value Updated This week?</inlineHelpText>
        <label>Aug Upd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aug__c</fullName>
        <description>One of 12 monthly forecast fields (currency)</description>
        <inlineHelpText>At least one monthly bucket should have a value greater than $0.</inlineHelpText>
        <label>Aug</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brand</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Brand selected is inactive, please select another Brand.  (LMA Pipeline)</errorMessage>
            <filterItems>
                <field>Manufacturer__c.Inactive__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Manufacturer__c</referenceTo>
        <relationshipLabel>LMA Pipelines</relationshipLabel>
        <relationshipName>LMA_Pipelines_Brand</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confidence__c</fullName>
        <label>Confidence</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Med</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dec_Last_Update__c</fullName>
        <inlineHelpText>Last date December value was updated</inlineHelpText>
        <label>Dec Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dec_Upd__c</fullName>
        <formula>NOT(ISBLANK(Dec_Last_Update__c)) &amp;&amp; 
Dec_Last_Update__c &gt; TODAY() - 7 &amp;&amp; 
Dec_Last_Update__c &lt; TODAY() + 1</formula>
        <inlineHelpText>December Value Updated This week?</inlineHelpText>
        <label>Dec Upd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dec__c</fullName>
        <description>One of 12 monthly forecast fields (currency)</description>
        <inlineHelpText>At least one monthly bucket should have a value greater than $0.</inlineHelpText>
        <label>Dec</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feb_Last_Update__c</fullName>
        <inlineHelpText>Last date Feburary value was updated</inlineHelpText>
        <label>Feb Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feb_Upd__c</fullName>
        <formula>NOT(ISBLANK(Feb_Last_Update__c)) &amp;&amp; 
Feb_Last_Update__c &gt; TODAY() - 7 &amp;&amp; 
Feb_Last_Update__c &lt; TODAY() + 1</formula>
        <inlineHelpText>Feburary Value Updated This week?</inlineHelpText>
        <label>Feb Upd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feb__c</fullName>
        <inlineHelpText>At least one monthly bucket should have a value greater than $0.</inlineHelpText>
        <label>Feb</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Jan_Last_Update__c</fullName>
        <inlineHelpText>Last date Jan value was updated.</inlineHelpText>
        <label>Jan Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jan_Upd__c</fullName>
        <formula>NOT(ISBLANK(Jan_Last_Update__c)) &amp;&amp;
Jan_Last_Update__c &gt;  TODAY() - 7 &amp;&amp;
Jan_Last_Update__c &lt;  TODAY() + 1</formula>
        <inlineHelpText>January value updated this week?</inlineHelpText>
        <label>Jan Upd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jan__c</fullName>
        <inlineHelpText>At least one monthly bucket should have a value greater than $0.</inlineHelpText>
        <label>Jan</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jul_Last_Update__c</fullName>
        <inlineHelpText>Last date July value was updated</inlineHelpText>
        <label>Jul Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jul_Upd__c</fullName>
        <formula>NOT(ISBLANK(Jul_Last_Update__c)) &amp;&amp; 
Jul_Last_Update__c &gt; TODAY() - 7 &amp;&amp; 
Jul_Last_Update__c &lt; TODAY() + 1</formula>
        <inlineHelpText>July Value Updated This week?</inlineHelpText>
        <label>Jul Upd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jul__c</fullName>
        <description>One of 12 month forecast fields (currency)</description>
        <inlineHelpText>At least one monthly bucket should have a value greater than $0.</inlineHelpText>
        <label>Jul</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jun_Last_Update__c</fullName>
        <inlineHelpText>Last date June value was updated</inlineHelpText>
        <label>Jun Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jun_Upd__c</fullName>
        <formula>NOT(ISBLANK(Jun_Last_Update__c)) &amp;&amp; 
Jun_Last_Update__c &gt; TODAY() - 7 &amp;&amp; 
Jun_Last_Update__c &lt; TODAY() + 1</formula>
        <inlineHelpText>Jun Value Updated This week?</inlineHelpText>
        <label>Jun Upd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jun__c</fullName>
        <inlineHelpText>At least one monthly bucket should have a value greater than $0.</inlineHelpText>
        <label>Jun</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMA_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Look up to Account with Site Type = Local Marketing.</description>
        <inlineHelpText>Site Type must equal &quot;Local Marketing&quot;.</inlineHelpText>
        <label>LMA Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>LMA_Pipelines</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mar_Last_Update__c</fullName>
        <inlineHelpText>Last date March value was updated</inlineHelpText>
        <label>Mar Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mar_Upd__c</fullName>
        <formula>NOT(ISBLANK(Mar_Last_Update__c)) &amp;&amp; 
Mar_Last_Update__c &gt; TODAY() - 7 &amp;&amp; 
Mar_Last_Update__c &lt; TODAY() + 1</formula>
        <inlineHelpText>March Value Updated This week?</inlineHelpText>
        <label>Mar Upd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mar__c</fullName>
        <inlineHelpText>At least one monthly bucket should have a value greater than $0.</inlineHelpText>
        <label>Mar</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May_Last_Update__c</fullName>
        <inlineHelpText>Last date May value was updated</inlineHelpText>
        <label>May Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>May_Upd__c</fullName>
        <formula>NOT(ISBLANK(May_Last_Update__c)) &amp;&amp; 
May_Last_Update__c &gt; TODAY() - 7 &amp;&amp; 
May_Last_Update__c &lt; TODAY() + 1</formula>
        <inlineHelpText>May Value Updated This week?</inlineHelpText>
        <label>May Upd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>May__c</fullName>
        <inlineHelpText>At least one monthly bucket should have a value greater than $0.</inlineHelpText>
        <label>May</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month_s_Updated_in_Last_7_Days__c</fullName>
        <formula>IF(Jan_Upd__c = True, &quot;Jan &quot;, &quot;&quot;)  &amp; 
IF(Feb_Upd__c = True, &quot;Feb &quot;, &quot;&quot;)  &amp; 
IF(Mar_Upd__c = True, &quot;Mar &quot;, &quot;&quot;)  &amp; 
IF(Apr_Upd__c = True, &quot;Apr &quot;, &quot;&quot;)  &amp;
IF(May_Upd__c = True, &quot;May &quot;, &quot;&quot;)  &amp;
IF(Jun_Upd__c = True, &quot;Jun &quot;, &quot;&quot;)  &amp;
IF(Jul_Upd__c = True, &quot;Jul &quot;, &quot;&quot;)  &amp;
IF(Aug_Upd__c = True, &quot;Aug &quot;, &quot;&quot;)  &amp;
IF(Sep_Upd__c = True, &quot;Sep &quot;, &quot;&quot;)  &amp;
IF(Oct_Upd__c = True, &quot;Oct &quot;, &quot;&quot;)  &amp;
IF(Nov_Upd__c = True, &quot;Nov &quot;, &quot;&quot;)  &amp;
IF(Dec_Upd__c = True, &quot;Dec &quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Month values updated in the last 7 days.</inlineHelpText>
        <label>Month(s) Updated in Last 7 Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nov_Last_Update__c</fullName>
        <inlineHelpText>Last date November value was updated</inlineHelpText>
        <label>Nov Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nov_Upd__c</fullName>
        <formula>NOT(ISBLANK(Nov_Last_Update__c)) &amp;&amp; 
Nov_Last_Update__c &gt; TODAY() - 7 &amp;&amp; 
Nov_Last_Update__c &lt; TODAY() + 1</formula>
        <inlineHelpText>November Value Updated This week?</inlineHelpText>
        <label>Nov Upd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nov__c</fullName>
        <description>One of 12 monthly forecast fields (currency)</description>
        <inlineHelpText>At least one monthly bucket should have a value greater than $0.</inlineHelpText>
        <label>Nov</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oct_Last_Update__c</fullName>
        <inlineHelpText>Last date October value was updated</inlineHelpText>
        <label>Oct Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Oct_Upd__c</fullName>
        <formula>NOT(ISBLANK(Oct_Last_Update__c)) &amp;&amp; 
Oct_Last_Update__c &gt; TODAY() - 7 &amp;&amp; 
Oct_Last_Update__c &lt; TODAY() + 1</formula>
        <inlineHelpText>October Value Updated This week?</inlineHelpText>
        <label>Oct Upd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oct__c</fullName>
        <description>One of 12 monthly forecast fields (currency)</description>
        <inlineHelpText>At least one monthly bucket should have a value greater than $0.</inlineHelpText>
        <label>Oct</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Region_funded__c</fullName>
        <label>Region-funded</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SR__c</fullName>
        <label>SR #</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sep_Last_Update__c</fullName>
        <inlineHelpText>Last date September value was updated</inlineHelpText>
        <label>Sep Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sep_Upd__c</fullName>
        <formula>NOT(ISBLANK(Sep_Last_Update__c)) &amp;&amp; 
Sep_Last_Update__c &gt; TODAY() - 7 &amp;&amp; 
Sep_Last_Update__c &lt; TODAY() + 1</formula>
        <inlineHelpText>September Value Updated This week?</inlineHelpText>
        <label>Sep Upd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sep__c</fullName>
        <description>One of 12 monthly forecast fields (currency)</description>
        <inlineHelpText>At least one monthly bucket should have a value greater than $0.</inlineHelpText>
        <label>Sep</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>LMA Pipeline</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LMA_Account__c</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>Region_funded__c</columns>
        <columns>Jul__c</columns>
        <columns>Aug__c</columns>
        <columns>Sep__c</columns>
        <columns>Oct__c</columns>
        <columns>Nov__c</columns>
        <columns>Dec__c</columns>
        <columns>Jan__c</columns>
        <columns>Feb__c</columns>
        <columns>Mar__c</columns>
        <columns>Apr__c</columns>
        <columns>May__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Pipelines</fullName>
        <columns>Fiscal_Year__c</columns>
        <columns>Brand__c</columns>
        <columns>LMA_Account__c</columns>
        <columns>Annual_Total__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Pipelines</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pipelines_by_Brand_Buick</fullName>
        <columns>NAME</columns>
        <columns>LMA_Account__c</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>Region_funded__c</columns>
        <columns>Jul__c</columns>
        <columns>Aug__c</columns>
        <columns>Sep__c</columns>
        <columns>Oct__c</columns>
        <columns>Nov__c</columns>
        <columns>Dec__c</columns>
        <columns>Jan__c</columns>
        <columns>Feb__c</columns>
        <columns>Mar__c</columns>
        <columns>Apr__c</columns>
        <columns>May__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand__c</field>
            <operation>contains</operation>
            <value>Buick</value>
        </filters>
        <label>Pipelines by Brand - Buick</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pipelines_by_Brand_Cadillac</fullName>
        <columns>NAME</columns>
        <columns>LMA_Account__c</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>Region_funded__c</columns>
        <columns>Jul__c</columns>
        <columns>Aug__c</columns>
        <columns>Sep__c</columns>
        <columns>Oct__c</columns>
        <columns>Nov__c</columns>
        <columns>Dec__c</columns>
        <columns>Jan__c</columns>
        <columns>Feb__c</columns>
        <columns>Mar__c</columns>
        <columns>Apr__c</columns>
        <columns>May__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand__c</field>
            <operation>contains</operation>
            <value>Cadillac</value>
        </filters>
        <label>Pipelines by Brand - Cadillac</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pipelines_by_Brand_Chevy</fullName>
        <columns>NAME</columns>
        <columns>LMA_Account__c</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>Region_funded__c</columns>
        <columns>Jul__c</columns>
        <columns>Aug__c</columns>
        <columns>Sep__c</columns>
        <columns>Oct__c</columns>
        <columns>Nov__c</columns>
        <columns>Dec__c</columns>
        <columns>Jan__c</columns>
        <columns>Feb__c</columns>
        <columns>Mar__c</columns>
        <columns>Apr__c</columns>
        <columns>May__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand__c</field>
            <operation>contains</operation>
            <value>Chev</value>
        </filters>
        <label>Pipelines by Brand - Chevy</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pipelines_by_Brand_GMC</fullName>
        <columns>NAME</columns>
        <columns>LMA_Account__c</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>Region_funded__c</columns>
        <columns>Jul__c</columns>
        <columns>Aug__c</columns>
        <columns>Sep__c</columns>
        <columns>Oct__c</columns>
        <columns>Nov__c</columns>
        <columns>Dec__c</columns>
        <columns>Jan__c</columns>
        <columns>Feb__c</columns>
        <columns>Mar__c</columns>
        <columns>Apr__c</columns>
        <columns>May__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand__c</field>
            <operation>contains</operation>
            <value>GMC</value>
        </filters>
        <label>Pipelines by Brand - GMC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pipelines_by_Year_2016</fullName>
        <columns>NAME</columns>
        <columns>LMA_Account__c</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>Region_funded__c</columns>
        <columns>Jul__c</columns>
        <columns>Aug__c</columns>
        <columns>Sep__c</columns>
        <columns>Oct__c</columns>
        <columns>Nov__c</columns>
        <columns>Dec__c</columns>
        <columns>Jan__c</columns>
        <columns>Feb__c</columns>
        <columns>Mar__c</columns>
        <columns>Apr__c</columns>
        <columns>May__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>Pipelines by Year - 2016</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pipelines_by_Year_2017</fullName>
        <columns>NAME</columns>
        <columns>LMA_Account__c</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>Region_funded__c</columns>
        <columns>Jul__c</columns>
        <columns>Aug__c</columns>
        <columns>Sep__c</columns>
        <columns>Oct__c</columns>
        <columns>Nov__c</columns>
        <columns>Dec__c</columns>
        <columns>Jan__c</columns>
        <columns>Feb__c</columns>
        <columns>Mar__c</columns>
        <columns>Apr__c</columns>
        <columns>May__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <label>Pipelines by Year - 2017</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pipelines_by_Year_2018</fullName>
        <columns>NAME</columns>
        <columns>LMA_Account__c</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>Region_funded__c</columns>
        <columns>Jul__c</columns>
        <columns>Aug__c</columns>
        <columns>Sep__c</columns>
        <columns>Oct__c</columns>
        <columns>Nov__c</columns>
        <columns>Dec__c</columns>
        <columns>Jan__c</columns>
        <columns>Feb__c</columns>
        <columns>Mar__c</columns>
        <columns>Apr__c</columns>
        <columns>May__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <label>Pipelines by Year - 2018</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LP-{00000}</displayFormat>
        <label>LMA Pipeline Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LMA Pipelines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ES_One_Bucket_Not_Null</fullName>
        <active>true</active>
        <description>At least one of the 12 buckets should be non-null and &gt; 0</description>
        <errorConditionFormula>(ISBLANK(Jan__c) || Jan__c &lt;= 0) &amp;&amp;
(ISBLANK(Feb__c) || Feb__c &lt;= 0) &amp;&amp;
(ISBLANK(Mar__c) || Mar__c &lt;= 0) &amp;&amp;
(ISBLANK(Apr__c) || Apr__c &lt;= 0) &amp;&amp;
(ISBLANK(May__c) || May__c &lt;= 0) &amp;&amp;
(ISBLANK(Jun__c) || Jun__c &lt;= 0) &amp;&amp;
(ISBLANK(Jul__c) || Jul__c &lt;= 0) &amp;&amp;
(ISBLANK(Aug__c) || Aug__c &lt;= 0) &amp;&amp;
(ISBLANK(Sep__c) || Sep__c &lt;= 0) &amp;&amp;
(ISBLANK(Oct__c) || Oct__c &lt;= 0) &amp;&amp;
(ISBLANK(Nov__c) || Nov__c &lt;= 0) &amp;&amp;
(ISBLANK(Dec__c) || Dec__c &lt;= 0)</errorConditionFormula>
        <errorMessage>At least one month must have a budget greater than $0! (LMA Pipeline)</errorMessage>
    </validationRules>
</CustomObject>